--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@vueuse/core": "^8.7.5",
     "@vueuse/head": "^0.7.6",
+    "dayjs": "^1.11.3",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.14",
     "prism-theme-vars": "^0.2.3",
@@ -26,7 +27,10 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.25.2",
     "@iconify-json/carbon": "^1.1.6",
+    "@iconify/json": "^2.1.75",
     "@intlify/vite-plugin-vue-i18n": "^4.0.0",
+    "@types/fs-extra": "^9.0.13",
+    "@types/markdown-it": "^12.2.3",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^2.3.3",
@@ -34,11 +38,16 @@
     "critters": "^0.0.16",
     "cross-env": "^7.0.3",
     "cypress": "^10.3.0",
+    "diacritics": "^1.3.0",
     "eslint": "^8.18.0",
     "eslint-plugin-cypress": "^2.12.1",
+    "fs-extra": "^10.1.0",
     "https-localhost": "^4.7.1",
+    "markdown-it": "^13.0.1",
+    "markdown-it-anchor": "^8.6.4",
     "markdown-it-link-attributes": "^4.0.0",
     "markdown-it-prism": "^2.2.4",
+    "markdown-it-table-of-contents": "^0.6.0",
     "pnpm": "^7.4.0",
     "typescript": "^4.7.4",
     "unocss": "^0.42.0",
