--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@types/diacritics": "^1.3.1",
     "@vueuse/core": "^8.7.5",
     "@vueuse/head": "^0.7.6",
     "dayjs": "^1.11.3",
